--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <img src="./images/icon-menu.svg" class="menu-icon p-2 text-white" style="height: 30px;" alt="">
                    </button>
                   <div class="menu-nav navbar-collapse  d-none d-lg-block" >
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul role="navigation" class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Features
@@ -81,10 +81,10 @@
              
           <div class="row vh-100 justify-content-evenly ">
             <div class="right d-block d-lg-none mb-5">
-              <img src="./images/image-hero-mobile.png" class="w-100" style="height: 450px;" alt="">
+              <img src="./images/image-hero-mobile.png" class="w-100"  alt="This is mobile">
             </div>
             <div id="left" class="m-auto col-10 col-lg-5 ">
-              <div class="header">
+              <div role="banner" class="header">
                <div class="mb-3 mb-lg-5">
                 <h1 class="fw-bold mb-0" style="font-size: 58px;">Make</h1>
                 <h1 class="fw-bold" style="font-size: 58px;">remote work</h1>
@@ -106,7 +106,7 @@
               </footer>
             </div>
             <div class="right col-12 col-lg-5 d-none d-lg-block">
-              <img src="./images/image-hero-desktop.png" class="right-img" style="height: 500px;" alt="">
+              <img src="./images/image-hero-desktop.png" class="right-img" style="height: 500px;" alt="This is desktop">
             </div>
           </div>
             </div>
