--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container-fluid">
           <div class="row ">
             <div class="col-12">
-              <nav class="navbar navbar-expand-lg text-dark navbar-light bg-white shadow mb-5">
+              <nav role="navigation" class="navbar navbar-expand-lg text-dark navbar-light bg-white shadow mb-5">
                 <div class="container-fluid">
                   <a class="navbar-brand fs-2 fw-bold" href="#">Snap</a>
                   <button class="d-block d-lg-none btn btn-outline-primary " >
