--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <img src="./images/icon-menu.svg" class="menu-icon p-2 text-white" style="height: 30px;" alt="">
                    </button>
                   <div class="menu-nav navbar-collapse  d-none d-lg-block" >
-                    <ul role="navigation" class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Features
@@ -50,7 +50,7 @@
                         </ul>
                       </li>
                       <li class="nav-item dropdown ">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a id="navbarDropdown" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Company
                         </a>
                         <ul class="dropdown-menu border-0 shadow" aria-labelledby="navbarDropdown">
@@ -105,7 +105,7 @@
                 <img src="./images/client-maker.svg"  alt="">
               </footer>
             </div>
-            <div class="right col-12 col-lg-5 d-none d-lg-block">
+            <div role="img" class="right col-12 col-lg-5 d-none d-lg-block">
               <img src="./images/image-hero-desktop.png" class="right-img" style="height: 500px;" alt="This is desktop">
             </div>
           </div>
