--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         </ul>
                       </li>
                       <li class="nav-item dropdown ">
-                        <a id="navbarDropdown" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Company
                         </a>
                         <ul class="dropdown-menu border-0 shadow" aria-labelledby="navbarDropdown">
@@ -105,7 +105,7 @@
                 <img src="./images/client-maker.svg"  alt="">
               </footer>
             </div>
-            <div role="img" class="right col-12 col-lg-5 d-none d-lg-block">
+            <div role="img" aria-label="blah" class="right col-12 col-lg-5 d-none d-lg-block">
               <img src="./images/image-hero-desktop.png" class="right-img" style="height: 500px;" alt="This is desktop">
             </div>
           </div>
