--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-En">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-        <div class="container-fluid">
+        <div role="main" class="container-fluid">
           <div class="row ">
             <div class="col-12">
               <nav class="navbar navbar-expand-lg text-dark navbar-light bg-white shadow mb-5">
@@ -27,10 +27,10 @@
                   <div class="menu-nav navbar-collapse  d-none d-lg-block" >
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="FeaturesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Features
                         </a>
-                        <ul class="dropdown-menu border-0 shadow" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu border-0 shadow" aria-labelledby="FeaturesDropdown">
                           <li>
                             <img src="./images/icon-todo.svg" alt="">
                             <a class="dropdown-item" href="todo.html">Todo List</a>
@@ -50,10 +50,10 @@
                         </ul>
                       </li>
                       <li class="nav-item dropdown ">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="companyDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Company
                         </a>
-                        <ul class="dropdown-menu border-0 shadow" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu border-0 shadow" aria-labelledby="companyDropdown">
                           <li><a class="dropdown-item" href="#">History</a></li>
                           <li><a class="dropdown-item" href="#">Our Team</a></li>
                           <li><a class="dropdown-item" href="#">Blog</a></li>
