--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <img src="./images/image-hero-mobile.png" class="w-100"  alt="This is mobile">
             </div>
             <div id="left" class="m-auto col-10 col-lg-5 ">
-              <div role="banner" class="header">
+              <div class="header">
                <div class="mb-3 mb-lg-5">
                 <h1 class="fw-bold mb-0" style="font-size: 58px;">Make</h1>
                 <h1 class="fw-bold" style="font-size: 58px;">remote work</h1>
@@ -98,7 +98,7 @@
                   Learn more
                 </button>
               </div>
-              <footer class="w-75 mt-5 footer d-flex justify-content-between mb-5 md-lg-0 ms-0">
+              <footer role="contentinfo" class="w-75 mt-5 footer d-flex justify-content-between mb-5 md-lg-0 ms-0">
                 <img src="./images/client-databiz.svg"  alt="">
                 <img src="./images/client-audiophile.svg"  alt="">
                 <img src="./images/client-meet.svg"  alt="">
