--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
                   Learn more
                 </button>
               </div>
-              <footer role="contentinfo" class="w-75 mt-5 footer d-flex justify-content-between mb-5 md-lg-0 ms-0">
+              <div class="w-75 mt-5 footer d-flex justify-content-between mb-5 md-lg-0 ms-0">
                 <img src="./images/client-databiz.svg"  alt="">
                 <img src="./images/client-audiophile.svg"  alt="">
                 <img src="./images/client-meet.svg"  alt="">
                 <img src="./images/client-maker.svg"  alt="">
-              </footer>
+              </div>
             </div>
             <div role="img" aria-label="blah" class="right col-12 col-lg-5 d-none d-lg-block">
               <img src="./images/image-hero-desktop.png" class="right-img" style="height: 500px;" alt="This is desktop">
